--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
       <div class="circle-3"></div>
       <div class="circle-4"></div>
       <div class="circle-5"></div>
+      <div class="circle-6"></div>
+   
     </div>
     <div class="page-wrapper">
       <!------- Header / Branding ------->
       <header class="site-header">
         <img src="img/loreal-logo.png" alt="L'Oréal company logo" />
-        <h1 class="site-title">Smart Product Advisor</h1>
+        <h1 class="site-title">Smart Routine + Product Advisor</h1>
       </header>
 
       <!------- Chat Area ------->
